# clitooltester

./: .gitignore  ACKNOWLEDGEMENTS  MANIFEST.in  README  README.md  clitooltester.ini  pyproject.toml  run_tests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: test_tox.yml
clitooltester/: __init__.py  cli_tool_definitions.py  resources.py  results_log.py  test_runner.py  yaml_definitions_file.py
clitooltester/scripts/: run.py
config/travis/: install.sh  run_coverage.sh  run_pylint.sh  runtests.sh
data/: tools.ini
docs/: conf.py  index.rst
docs/sources/api/: clitooltester.rst  clitooltester.scripts.rst  modules.rst
scripts/: run.py
test_data/: inputs.yaml  inputs_with_set.yaml  test.yaml  test_with_docker.yaml  tests.yaml
tests/: cli_tool_definitions.py  test_lib.py  test_runner.py  yaml_definitions_file.py
utils/: update_release.sh
